Fix white space in FAB

--- a/less/bootstrap-theme/fab.less
+++ b/less/bootstrap-theme/fab.less
@@ -24,6 +24,8 @@
 .btn {
     &.btn-fab {
         border: none;
+        white-space: normal;
+        word-wrap: normal;
         height: 0;
         padding: 0 0 100% 0;
         min-width: 55px;
